Changed notebook cell prompt from monospace to JupyterLab's main UI font, fixed the background spacing of portrait icons inside the tabs

--- a/src/default-theme/images.css
+++ b/src/default-theme/images.css
@@ -93,18 +93,3 @@
 .jp-FolderIcon {
   background-image: url(images/landingfolder.svg);
 }
-
-
-.jp-MainAreaLandscapeIcon {
-  background-repeat: no-repeat;
-  margin-right: 2px;
-  width: 22px;
-}
-
-
-.jp-MainAreaPortraitIcon {
-  background-position: 0 1px;
-  background-repeat: no-repeat;
-  margin-right: 0;
-  width: 20px;
-}
